k8s/services/media/app/readarr/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
spec:
  replicas: 0
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: readarr
          image: ghcr.io/hotio/readarr
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8787
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: readarr-data
        - name: media
          persistentVolumeClaim:
            claimName: media
      nodeSelector:
        k8s.as212024.net/role: media
      tolerations:
        - key: k8s.as212024.net/role
          operator: Equal
          value: media
          effect: NoExecute
