k8s/services/media/app/readarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: readarr
spec:
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
