k8s/services/media/app/readarr/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: readarr
spec:
  parentRefs:
    - name: eg-http-bar
      namespace: core-eg
      sectionName: https
  hostnames:
    - readarr.lama-corp.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: readarr
          port: 80
      timeouts:
        request: 60s
        backendRequest: 60s
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: readarr
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: readarr
  oidc:
    provider:
      issuer: https://auth.lama-corp.space/application/o/readarr/
    clientID: readarr
    clientSecret:
      name: readarr-oidc-credentials
    scopes:
      - offline_access
    refreshToken: true
